# data-peek-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
peek/: main.py
tests/: conftest.py  test_main.py
